Fixed errors & overflows on WMP List

--- a/macro-menu/public/styles.css
+++ b/macro-menu/public/styles.css
@@ -912,3 +912,26 @@ margin: 0.5rem;
 .dropdown-menu{
   right:25% !important
 }
+.wmpsTblsCard{
+  /* max-height:80vh; */
+}
+.myWMPsCardHdr{
+  display:unset;
+}
+.createWMPBttn{
+  margin:1rem 0 0.5rem 0;
+}
+.wmpsAccrdn{
+  max-height:75vh !important;
+  overflow: scroll !important;
+}
+.accrdnwmpsTblsBdy{
+  height:100% !important;
+  padding:0.5rem !important;
+  background-color: rgb(0 0 0 / 3%);
+}
+.wmpsTbls * {
+  padding: 0.25rem !important;
+  font-size: 0.8rem;
+  background-color: #fff;
+}
